--- a/9/styles/styles.css
+++ b/9/styles/styles.css
@@ -34,7 +34,6 @@
   --color-bgnd-second-opaque-semi: rgba(131, 179, 211, 0.2);
   --color-bgnd-second-opaque-light: rgba(131, 179, 211, 0.12);
   --color-bgnd-image: #708ea1;
-  --color-bgnd-modal: rgba(242, 242, 242, 0.8);
   --color-bgnd-tooltip: #333333;
   --color-btn-basic: #756157;
   --color-btn-basic-hover: #615048;
@@ -96,7 +95,7 @@ body {
 .visually-hidden {
   position: absolute;
   overflow: hidden;
-  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
   clip-path: inset(100%);
   width: 1px;
   height: 1px;
@@ -433,7 +432,7 @@ body {
   list-style: none;
 }
 
-.advantages__item:nth-child(even of .tile) {
+.advantages .tile:nth-child(even of .tile) {
   background-color: var(--color-bgnd-second-opaque-semi);
 }
 
@@ -456,7 +455,7 @@ body {
   flex-direction: column;
   justify-content: center;
   min-height: 385px;
-  padding: 75px 85px;
+  padding: 75px 84px;
   background-color: var(--color-bgnd-second-opaque-light);
 }
 
@@ -470,17 +469,18 @@ body {
 }
 
 .tile__text {
-  order: 1;
   margin: 0;
 }
 /* Tile ending */
 
-.advantages .tile::after {
+.advantages__item .tile__title::after {
   content: "";
+  display: block;
   align-self: center;
   width: 60px;
-  margin-bottom: 30px;
-  border-bottom: 2px solid var(--color-brdr-tile);
+  height: 2px;
+  margin: 30px auto 0;
+  background-color: var(--color-brdr-tile);
 }
 
 .advantages__item-container {
@@ -488,8 +488,8 @@ body {
   background-color: rgba(0, 0, 0, 0);
 }
 
-.advantages .advantages__item-container::after {
-  border-color: var(--color-brdr-tile-opaque);
+.advantages__item-container .tile__title::after {
+  background-color: var(--color-brdr-tile-opaque);
 }
 
 .advantages__item-container .tile__title {
@@ -524,7 +524,7 @@ body {
   background: center / contain no-repeat;
 }
 
-.recommend__item:nth-child(even of .tile) {
+.recommend .tile:nth-child(even of .tile) {
   background-color: rgba(0, 0, 0, 0);
 }
 
@@ -594,6 +594,11 @@ body {
 
 .subscribe__label {
   flex-grow: 1;
+}
+
+.subscribe__input,
+.subscribe__button {
+  outline-offset: -3px;
 }
 
 /* Text input */
@@ -748,43 +753,36 @@ body {
 }
 
 /* Modal window */
-.index__modal-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background-color: var(--color-bgnd-modal);
-}
-
-.index__modal-container--closed {
-  display: none;
-}
-
-.index__modal {
-  display: grid;
-  margin: auto;
-  background-color: #ffffff;
+.modal {
+  padding: 0;
+  background-color: var(--color-bgnd-basic);
+  border: none;
   border-radius: 30px;
   box-shadow: 0 25px 50px 0 var(--color-shadow-modal);
 }
 
-.index__modal--search {
+.modal::-webkit-backdrop {
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.modal::backdrop {
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.index__modal-search {
   width: 717px;
 }
 
-.index__modal-close-button {
+.modal-close-button {
+  position: absolute;
+  top: 64px;
+  right: 52px;
   z-index: 1;
   display: flex;
-  grid-area: 1 / 1 / 2 / 2;
   align-self: start;
   justify-self: end;
   width: 52px;
   height: 52px;
-  margin-top: 64px;
-  margin-right: 52px;
   padding: 0;
   background-color: var(--color-btn-form);
   border: none;
@@ -792,7 +790,7 @@ body {
   cursor: pointer;
 }
 
-.index__modal-close-button::after {
+.modal-close-button::after {
   content: "";
   display: block;
   width: 14px;
@@ -803,18 +801,17 @@ body {
   mask: url("../images/icons-cross.svg") center / contain no-repeat;
 }
 
-.index__modal-close-button:hover,
-.index__modal-close-button:focus-visible,
-.index__modal-close-button:active {
+.modal-close-button:hover,
+.modal-close-button:focus-visible,
+.modal-close-button:active {
   background-color: var(--color-btn-form-hover);
 }
 
-.index__modal-close-button:active::after {
+.modal-close-button:active::after {
   background-color: var(--color-icon-basic-bgnd-active-2);
 }
 
-.index__modal-content {
-  grid-area: 1 / 1 / 2 / 2;
+.modal-search {
   padding: 64px 70px;
 }
 
@@ -830,8 +827,11 @@ body {
 }
 
 .modal-search__form {
+  --gap-search-form: 48px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  row-gap: var(--gap-search-form);
+  column-gap: 25px;
   align-items: center;
 }
 
@@ -851,6 +851,7 @@ body {
 .modal-search__label-text,
 .modal-search__wrapper .modal-search__label {
   width: 137px;
+  padding-right: 5px;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
@@ -874,8 +875,7 @@ body {
 
 .modal-search__notice {
   min-height: 16px;
-  margin: 0;
-  margin-bottom: 23px;
+  margin-bottom: calc(23px - var(--gap-search-form));
   margin-left: 137px;
   padding: 4px 20px 0;
   font-size: 16px;
@@ -889,19 +889,22 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-bottom: 48px;
 }
 
 .modal-search__wrapper--children {
   justify-self: end;
 }
 
+.modal-search__input-with-buttons {
+  display: flex;
+}
+
 .modal-search__wrapper .modal-search__field {
   width: 31px;
-  padding: 15px 0 13px;
+  padding: 13px 0 11px;
   line-height: 20px;
   text-align: center;
-  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .modal-search__wrapper .modal-search__field::-webkit-outer-spin-button,
@@ -947,6 +950,11 @@ body {
   mask: url("../images/icons-plus.svg") center / contain no-repeat;
 }
 
+.modal-search__wrapper .modal-search__field:focus,
+.modal-search__button-edit:focus {
+  outline-offset: -3px;
+}
+
 .modal-search__button-edit:not(:disabled):hover::after,
 .modal-search__button-edit:not(:disabled):focus-visible::after {
   background-color: var(--color-icon-basic);
@@ -962,25 +970,21 @@ body {
 }
 
 /* Tooltip */
-.modal-search__wrapper--children .modal-search__label-with-tooltip {
+.modal-search__label-with-tooltip {
   display: flex;
   align-items: center;
-  width: 111px;
+  min-width: 111px;
+  margin-right: 20px;
 }
 
 .modal-search__label-with-tooltip .modal-search__label {
   width: fit-content;
-  margin-right: 11px;
-}
-
-.modal-search__label-with-tooltip {
-  margin-right: 20px;
+  max-width: 104px;
+  margin-right: 6px;
 }
 
 .modal-search__tooltip {
   position: relative;
-  display: inline-block;
-  vertical-align: middle;
 }
 
 .modal-search__tooltip-toggle {
@@ -1217,7 +1221,6 @@ body {
   margin-right: 16px;
   background-color: var(--color-bgnd-basic);
   -webkit-appearance: none;
-  -moz-appearance: none;
   appearance: none;
 }
 
@@ -1314,7 +1317,7 @@ body {
   padding: 13px 45px 11px 20px;
   font-weight: 700;
   border-radius: 4px 0 0 4px;
-  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .filter__form-label--price .filter__form-input--max-price {
@@ -1412,7 +1415,6 @@ body {
   border-radius: 4px;
   cursor: pointer;
   -webkit-appearance: none;
-  -moz-appearance: none;
   appearance: none;
 }
 
